# qq-gitlab-bot.rs

./: Cargo.toml  README.md  config.toml
src/: bot.rs  main.rs  webhook.rs
